# sagittarius_ws

./: .gitignore  LICENSE  README.md  README_CN.md  onekey.sh
src/sagittarius_arm_ros/: install.sh
src/sagittarius_arm_ros/sagittarius_demo/sagittarius_drawstar_and_display/: CMakeLists.txt  package.xml
src/sagittarius_arm_ros/sagittarius_demo/sagittarius_drawstar_and_display/launch/: moveit_draw_star.launch
src/sagittarius_arm_ros/sagittarius_demo/sagittarius_drawstar_and_display/scripts/: send_topic.sh
src/sagittarius_arm_ros/sagittarius_demo/sagittarius_drawstar_and_display/src/: moveit_draw_star.py
src/sagittarius_arm_ros/sagittarius_demo/sagittarius_joy/: README.MD
src/sagittarius_arm_ros/sagittarius_demo/sagittarius_joy/scripts/: sagittarius_arm
src/sagittarius_arm_ros/sagittarius_demo/sagittarius_joy/src/: sagittarius_joy.cpp
src/sagittarius_arm_ros/sagittarius_demo/sagittarius_puppet_control/bag/: record1.bag
src/sagittarius_arm_ros/sagittarius_demo/sagittarius_puppet_control/rviz/: puppet_config.rviz
src/sagittarius_arm_ros/sagittarius_demo/sagittarius_shake_head/: CMakeLists.txt  package.xml
src/sagittarius_arm_ros/sagittarius_demo/sagittarius_shake_head/launch/: shake_head.launch
src/sagittarius_arm_ros/sagittarius_demo/sagittarius_shake_head/scripts/: send_topic.sh
src/sagittarius_arm_ros/sagittarius_demo/sagittarius_shake_head/src/: shake_head.py
src/sagittarius_arm_ros/sagittarius_descriptions/urdf/: sgr532.gv  sgr532.urdf
src/sagittarius_arm_ros/sagittarius_moveit/launch/: ompl_planning_pipeline.launch.xml
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_object_color_detector/: CMakeLists.txt  README.MD  package.xml
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_object_color_detector/action/: SGRCtrl.action
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_object_color_detector/config/: HSVParams.cfg  vision_config.yaml
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_object_color_detector/launch/: camera_calibration_hsv.launch  color_classification.launch  color_classification_fixed.launch  hsv_params.launch  object_pick.launch  usb_cam.launch
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_object_color_detector/nodes/: calibration.py  calibration_pose.py  color_classification.py  color_classification_fixed.py  grasp_once.py  sgr_ctrl.py  tool_get_hsv.py
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_object_color_detector/scripts/: send_topic.sh
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_object_color_detector/src/: HSVParams_node.cpp
src/sagittarius_arm_ros/sagittarius_unity/: CMakeLists.txt  package.xml
src/sagittarius_arm_ros/sagittarius_unity/launch/: unity.launch
src/sagittarius_arm_ros/sagittarius_unity/src/: state_publisher.py
src/sagittarius_arm_ros/sdk_sagittarius_arm/: CMakeLists.txt
src/sagittarius_arm_ros/sdk_sagittarius_arm/include/sdk_sagittarius_arm/: sdk_sagittarius_arm_common.h  sdk_sagittarius_arm_common_serial.h  sdk_sagittarius_arm_constants.h  sdk_sagittarius_arm_real.h
src/sagittarius_arm_ros/sdk_sagittarius_arm/launch/: run_sagittarius.launch  run_sagittarius_pn.launch  rviz_control_sagittarius.launch  sdk_sagittarius_arm.launch
src/sagittarius_arm_ros/sdk_sagittarius_arm/scripts/: Forward_kinematics.py  Inverse_kinematics.py  getpose.py  moveit_cartesian_demo.py  precision_test.py  switchAB.py
src/sagittarius_arm_ros/sdk_sagittarius_arm/src/: sdk_sagittarius_arm_common.cpp  sdk_sagittarius_arm_common_serial.cpp  sdk_sagittarius_arm_real.cpp
