<?xml version="1.0"?>
<package format="2">
  <name>sagittarius_shake_head</name>
  <version>1.0.0</version>
  <description>The sagittarius_shake_head package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="stoah002@mymail.unisa.edu.au">Andy.Stovell</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
</package>
